<resources>
    <string name="app_name">MyAlarm</string>

    <!--    Strings for weekdays-->
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>

    <string name="toggleSwitch"></string>
    <string name="editButton">Edit button for your alarm</string>
    <string name="setAlarm">OK</string>
    <string name="alarmTime_default">08:00</string>

</resources>
